--- a/templates/Pages/blog.html.twig
+++ b/templates/Pages/blog.html.twig
@@ -30,7 +30,7 @@
             <div class="col-md-12">
                 <h2 class="blog-title">Today I Learned...</h2>
                 <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive o
-                    'You did,' said the Mock Turtle. <a href="#">Read more...</a></p>
+                    'You did,' said the Mock Turtle. <a href="/blog/test">Read more...</a></p>
                 <div>
                     <span class="badge date-label">2 weeks ago</span>
                     <div class="pull-right">
@@ -50,7 +50,7 @@
                 <h2 class="blog-title">Today I Learned...</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="#">Read more...</a></p>
+                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="/blog/test">Read more...</a></p>
                 <div>
                     <span class="badge date-label">1 months ago</span>
                     <div class="pull-right">
@@ -71,7 +71,7 @@
                 <h2 class="blog-title">Today I Learned...</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="#">Read more...</a></p>
+                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="/blog/test">Read more...</a></p>
                 <div>
                     <span class="badge date-label">2 months ago</span>
                     <div class="pull-right">
@@ -92,7 +92,7 @@
                 <h2 class="blog-title">Revolution has begun!</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="#">Read more...</a></p>
+                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="/blog/test">Read more...</a></p>
                 <div>
                     <span class="badge date-label">2 months ago</span>
                     <div class="pull-right">
